I made a new navigation thingie.

--- a/public/default.css
+++ b/public/default.css
@@ -11,8 +11,8 @@ body {
     overflow-x: hidden;
     margin:0px auto;
     text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
+/*    padding-top: 10px;
+*/    padding-bottom: 10px;
 }
 
 img {
@@ -53,10 +53,12 @@ p {
 #main_container {
     
     background-color: white;
-    border-color: #222;
+    margin-top: 50px;
+    padding-top: 5px;
     border-radius: 5px 5px 5px 5px;
     -moz-border-radius: 5px 5px 5px 5px;
     -webkit-border-radius: 5px 5px 5px 5px;
+    
     
 }
 
@@ -70,9 +72,12 @@ p {
     text-align: left;
     cursor: pointer;
     height: 75px;
+    width: 100%;
     border-radius: 5px 5px 0 0;
     -moz-border-radius: 5px 5px 0 0;
     -webkit-border-radius: 5px 5px 0 0;
+    position: fixed;
+    z-index: auto !important;
 
 }
 
@@ -102,14 +107,34 @@ p {
 */
 
     white-space:nowrap;
-    background-color: black;
     font-family: 'Gruppo', cursive;
-    height: 36px;
-    border-bottom: 10px solid white;
+    height: 45px;
+/*    border-bottom: 5px solid white;
+*/    position: fixed;
+    width: 1080px;
+    top: 0px;
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0.90) 0%, rgba(0,0,0,0) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.90)), color-stop(100%,rgba(0,0,0,0)));
+    background: -webkit-linear-gradient(top,  rgba(0,0,0,0.90) 0%,rgba(0,0,0,0) 100%);
+    background: -o-linear-gradient(top,  rgba(0,0,0,0.90) 0%,rgba(0,0,0,0) 100%);
+    background: -ms-linear-gradient(top,  rgba(0,0,0,0.90) 0%,rgba(0,0,0,0) 100%);
+    background: linear-gradient(to bottom,  rgba(0,0,0,0.90) 0%,rgba(0,0,0,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
+
+}
+
+#navigation_container h1 {
+    float: left;
+    color: white;
+    font-family: 'Nothing You Could Do', cursive;
+    font-size: 30px;
+    margin-left: 10px;
+    margin-top: 5px;
+    
 }
 
 #navigation_container ul {
-    position: absolute;
+    position: relative;
     text-decoration: none;
     margin-top: 0px;
 }
@@ -133,9 +158,15 @@ p {
     padding: 8px 25px 0 25px;
     margin: 0px;
     color: white;
-    height: 28px;
+    height: 50px;
+    text-shadow: 1px 1px 1px black;
     background-color: grey;
     text-decoration: none;
+    box-shadow: 1px 1px 15px black;
+        border-radius: 0 0 5px 5px;
+    -moz-border-radius: 0 0 5px 5px;
+    -webkit-border-radius: 0 0 5px 5px;
+
 }
 
 #navigation_container a:visited {
@@ -431,8 +462,8 @@ font-family: 'Cousine', sans-serif;
 }
 
 #content_details_large {
+    font-family: 'Cousine', sans-serif;
     
-    font-family: Verdana;
 }
 
 #content_details_large .title {
