--- a/public/default.css
+++ b/public/default.css
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Nothing+You+Could+Do);
 @import url(http://fonts.googleapis.com/css?family=Gruppo);
 @import url(http://fonts.googleapis.com/css?family=Cousine:400,700,400italic,700italic);
+@import url(http://fonts.googleapis.com/css?family=Prosto+One);
 
 body {
 
@@ -69,7 +70,7 @@ select {
     border-radius: 5px 5px 5px 5px;
     -moz-border-radius: 5px 5px 5px 5px;
     -webkit-border-radius: 5px 5px 5px 5px;
-    box-shadow: 1px 1px 50px 2px orange;
+    box-shadow: 1px 1px 50px 5px orange;
 
     
     
@@ -106,7 +107,7 @@ select {
 #header_container h2 {
 
     float: right;
-    font-family: 'Gruppo', cursive;
+    font-family: 'Prosto One', cursive;
     color: grey;
     font-size: 20px;
     margin-right: 5px;
@@ -120,18 +121,18 @@ select {
 */
 
     white-space:nowrap;
-    font-family: 'Gruppo', cursive;
-    height: 45px;
+    font-family: 'Prosto One', cursive;
+    height: 50px;
 /*    border-bottom: 5px solid white;
 */    position: fixed;
     width: 1080px;
     top: 0px;
-    background: -moz-linear-gradient(top,  rgba(0,0,0,0.90) 0%, rgba(0,0,0,0) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.90)), color-stop(100%,rgba(0,0,0,0)));
-    background: -webkit-linear-gradient(top,  rgba(0,0,0,0.90) 0%,rgba(0,0,0,0) 100%);
-    background: -o-linear-gradient(top,  rgba(0,0,0,0.90) 0%,rgba(0,0,0,0) 100%);
-    background: -ms-linear-gradient(top,  rgba(0,0,0,0.90) 0%,rgba(0,0,0,0) 100%);
-    background: linear-gradient(to bottom,  rgba(0,0,0,0.90) 0%,rgba(0,0,0,0) 100%);
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0.99) 0%, rgba(0,0,0,0) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.99)), color-stop(100%,rgba(0,0,0,0)));
+    background: -webkit-linear-gradient(top,  rgba(0,0,0,0.99) 0%,rgba(0,0,0,0) 100%);
+    background: -o-linear-gradient(top,  rgba(0,0,0,0.99) 0%,rgba(0,0,0,0) 100%);
+    background: -ms-linear-gradient(top,  rgba(0,0,0,0.99) 0%,rgba(0,0,0,0) 100%);
+    background: linear-gradient(to bottom,  rgba(0,0,0,0.99) 0%,rgba(0,0,0,0) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
 
 }
@@ -143,7 +144,7 @@ select {
     font-size: 30px;
     margin-left: 10px;
     margin-top: 5px;
-        text-shadow: 1px 1px 3px grey;
+        text-shadow: 1px 1px 3px orange;
 
     
 }
@@ -157,7 +158,7 @@ select {
 #navigation_container li {
         text-shadow: 1px 1px 3px black;
 
-    font-size: 1em;
+    font-size: 0.8em;
     text-decoration: none;
     display: inline-block;
 }
@@ -176,7 +177,7 @@ select {
     color: white;
     height: 45px;
     text-shadow: 1px 1px 1px black;
-    background-color: grey;
+    background-color: orange;
     text-decoration: none;
     box-shadow: 1px 1px 10px black;
         border-radius: 0 0 5px 5px;
@@ -194,7 +195,7 @@ select {
 /* search form */
 
 #header_container .search_form {
-font-family: 'Gruppo', cursive;
+font-family: 'Prosto One', cursive;
     text-align: right;
     padding-top: 6.2px;
     position: absolute;
@@ -207,7 +208,7 @@ font-family: 'Gruppo', cursive;
 }
 
 #header_container .search_input_text {
-font-family: 'Gruppo', cursive;
+font-family: 'Prosto One', cursive;
     verticle-align: middle;
     color: white;
     border: none;
@@ -268,7 +269,7 @@ font-family: 'Gruppo', cursive;
     -moz-border-radius: 0 25px 25px 0;
     -webkit-border-radius: 0 25px 25px 0;
      box-shadow: 1px 1px 5px 1px grey;
-         text-shadow: 1px 1px 1px black;
+         text-shadow: 1px 1px 1px silver;
 
 
 }
@@ -281,8 +282,8 @@ font-family: 'Gruppo', cursive;
 #content_container h2 {
 
     color: black;
-font-family: 'Gruppo', cursive;
-font-size: larger;
+    font-family: 'Prosto One', cursive;
+    font-size: larger;
     font-weight: bolder;
     margin-top: 0px;
     margin-bottom: 5px;
@@ -290,19 +291,18 @@ font-size: larger;
 
 #content_container h3 {
 
-font-family: 'Gruppo', cursive;
+font-family: 'Prosto One', cursive;
 
     width: 98%;
     height: 18px;
     border-top: 1px solid black;
-    background-color: grey;
+    background-color: silver;
     color: white;
     padding: 10px;
     font-size: 1em;
     font-weight: bold;
     clear: both;
-/*    list-style-type: square;
-*/     border-radius: 0 0 3px 3px;
+     border-radius: 0 0 3px 3px;
     -moz-border-radius: 0 0 3px 3px;
     -webkit-border-radius: 0 0 3px 3px;
      box-shadow: 1px 1px 5px grey;
@@ -313,8 +313,8 @@ font-family: 'Gruppo', cursive;
 
 #content_container h4 {
 
-    color: #222;
-font-family: 'Gruppo', cursive;
+    color: black;
+font-family: 'Prosto One', cursive;
 font-weight: bold;
     font-size: small;
     margin-top: 0px;
@@ -323,7 +323,7 @@ font-weight: bold;
 
 #content_container p {
 
-font-family: 'Cousine', sans-serif;
+    font-family: 'Cousine', sans-serif;
     width: 98%;
     font-weight: normal;
     font-size: small;
@@ -463,6 +463,7 @@ font-family: 'Cousine', sans-serif;
 
 #content_details_small .title {
     
+    font-family: 'Prosto One', cursive;
     font-weight: bold;
     font-size: small;
     color: black;
@@ -491,6 +492,7 @@ font-family: 'Cousine', sans-serif;
 
 #content_details_large .title {
     
+        font-family: 'Prosto One', cursive;
     font-weight: bold;
     font-size: large;
     color: black;
@@ -550,7 +552,7 @@ font-family: 'Cousine', sans-serif;
 
 #content_container .about_form_container {
     
-    background-color: #e6e2e3;
+    background-color: silver;
     border-bottom: 1px solid black;
     width: 97.5%;
     height: 615px;
@@ -632,7 +634,7 @@ font-family: 'Cousine', sans-serif;
 
 #content_container .read_more_right {
 
-font-family: 'Gruppo', cursive;
+font-family: 'Prosto One', cursive;
 
     padding-top: 0px;
     padding-bottom: 10px;
@@ -645,7 +647,7 @@ font-family: 'Gruppo', cursive;
 
 #content_container .read_more_right_padded {
 
-font-family: 'Gruppo', cursive;
+font-family: 'Prosto One', cursive;
 
     padding-top: 0px;
     padding-bottom: 10px;
@@ -658,7 +660,7 @@ font-family: 'Gruppo', cursive;
 
 #content_container .read_more_left {
 
-    font-family: 'Gruppo', cursive;
+    font-family: 'Prosto One', cursive;
 
     padding-top: 0px;
     padding-bottom: 10px;
@@ -713,21 +715,25 @@ font-family: 'Gruppo', cursive;
 }
 
 #content_container .upcoming_events_box {
-    background-color: #E6E2E3; padding: 15px 0px 5px 5px; width: 99.9%;
+    background-color: silver;
+    padding: 15px 0px 5px 5px; width: 99.9%;
     border-radius: 3px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
 }
 #content_container .upcoming_events_title {
 
-    color: #222;
-    font-family: Verdana;
+    color: black;
+    font-family: 'Prosto One', cursive;
+
     font-size: small;
     font-weight: bold;
     
 }
 
 #content_container .upcoming_events_text {
+
+    font-family: 'Cousine', sans-serif;
 
     font-size: 10px;
     padding-top: 6px;
@@ -737,8 +743,7 @@ font-family: 'Gruppo', cursive;
 
 #content_container .upcoming_events_date {
 
-    color: #222;
-    font-family: Verdana;
+    color: black;
     font-size: 0.7em;
     font-weight: bold;
     padding-bottom: 5px;
@@ -759,8 +764,8 @@ font-family: 'Gruppo', cursive;
 
 #content_container .block_title {
 
-    color: #222;
-    font-family: Verdana;
+    color: black;
+    font-family: 'Prosto One', cursive;
     font-size: small;
     font-weight: bold;
 }
@@ -804,7 +809,7 @@ font-family: 'Gruppo', cursive;
     height: 5px;
     top: -15px;
     padding: 5px 10px 5px 5px;
-    background-color: #e6e2e3;
+    background-color: silver;
     text-align: right;
     color: white;
    
@@ -851,7 +856,7 @@ font-family: 'Gruppo', cursive;
 
 #content_container .block_about_box_title {
     
-    font-family: Verdana;
+    font-family: 'Prosto One', cursive;
     font-weight: bold;
     color: black;
     font-size: larger;
@@ -990,42 +995,13 @@ font-family: 'Cousine', sans-serif;
     width: 100%;
 }
 
-/* live page navigation */
-
-#live_bullet_navigation div {
-    
-    padding: 0px;
-}
-
-#live_bullet_navigation ul {
-
-    list-style: none;
-    width: 250px;
-    padding: 0px;
-}
-
-#live_bullet_navigation li {
-    
-    list-style: none;
-    border-bottom: 0.1em solid black;
-    color: black;
-    padding: 3px;
-}
-
-#live_bullet_navigation .title {
-    
-    font-family: Verdana;
-    font-weight: bolder;
-    font-size: large;
-}
-
 #content_container .ad_space_header {
 
     text-align: center;
     margin-bottom: 10px;
     margin-left: 5px;
     margin-right: 5px;
-    background-color: #e6e2e3;
+    background-color: silver;
     padding-top: 10px;
     padding-bottom: 8px;
 /*    border-left: 5px solid white;
@@ -1039,7 +1015,7 @@ font-family: 'Cousine', sans-serif;
 #content_container .ad_space_block {
 
     text-align: center;
-    background-color: #e6e2e3;
+    background-color: silver;
     margin-top: 7px;
     margin-bottom: 7px;
 }
@@ -1052,8 +1028,8 @@ font-family: 'Cousine', sans-serif;
 
 #content_container .content_none {
     
-    background-color: #e6e2e3;
-    border-color: #222;
+    background-color: silver;
+    border-color: black;
     border-radius: 5px 5px 5px 5px;
     -moz-border-radius: 5px 5px 5px 5px;
     -webkit-border-radius: 5px 5px 5px 5px;
@@ -1083,8 +1059,8 @@ font-family: 'Cousine', sans-serif;
 
 #content_container .content_gallery {
     
- background-color: #e6e2e3;
-    border-color: #222;
+ background-color: silver;
+    border-color: black;
     border-radius: 5px 5px 5px 5px;
     -moz-border-radius: 5px 5px 5px 5px;
     -webkit-border-radius: 5px 5px 5px 5px;
@@ -1103,7 +1079,7 @@ font-family: 'Cousine', sans-serif;
 
     float: right;
     width: 30%;
-    background-color: #e6e2e3;
+    background-color: silver;
 /*    border-right: 25px solid white;
     */
     margin-right: 25px;
@@ -1226,7 +1202,7 @@ font-family: 'Cousine', sans-serif;
 
     position: relative;
     height: 18px;
-    background-color: #e6e2e3;
+    background-color: silver;
     color: black;
     font-size: 1em;
     font-weight: bold;
@@ -1306,7 +1282,7 @@ margin-top: -10px;
 
 #content_loader {
 
-    background: #222;
+    background: black;
     
     /* I made this really huge on purpose */
     height: 10000px; 
@@ -1338,7 +1314,7 @@ margin-top: -10px;
 #gallery_container {
     
     text-align: center;
-/*    background-color: #e6e2e3;
+/*    background-color: silver;
 */    
    /* margin-left:0;
     border: 1px solid black; */
@@ -1456,7 +1432,7 @@ margin-top: -10px;
 	cursor: default;
 /*	font-family: tahoma, verdana, helvetica;*/
         /*font-size: 11px;*/
-        font-family: Verdana;
+        font-family: 'Prosto One', cursive;
         font-size: medium;
 	padding: 0px;
 	text-align: center;
@@ -1464,7 +1440,7 @@ margin-top: -10px;
         width: 312px;
 	overflow: hidden;
         background-color: white; /**/
-
+        color: black;
         border-color: white;
 
     border-radius: 5px 5px 5px 5px;
@@ -1512,8 +1488,8 @@ margin-top: -10px;
 }
 .dojoxCalendarContainer table {
 	font-size: 11px;
-	border-bottom: 4px solid #e6e2e3;
-        background-color: #e6e2e3;
+	border-bottom: 4px solid silver;
+        background-color: silver;
 }
 .dojoxCalendarHeader {
 	height: 20px;
@@ -1588,9 +1564,9 @@ margin-top: -10px;
 	text-align: center;
 }
 .dojoxCalendar .dojoxCalendarContainer {
-	background-color: #e6e2e3;
+	background-color: silver;
 	/*border: 1px solid #656565;*/
-	color: #183720;
+	color: grey;
         
 }
 .dojoxCalendar .dijitCalendarDisabledDate {
@@ -1599,7 +1575,7 @@ margin-top: -10px;
 }
 .dojoxCalendar .dojoxCalendarFooter {
 	
-        /*border-top: 1px solid #e6e2e3;*/
+        /*border-top: 1px solid silver;*/
         
         background-color: white;
 	
@@ -1616,10 +1592,10 @@ margin-top: -10px;
 	background: white url('http://ajax.googleapis.com/ajax/libs/dojo/1.6.0/dijit/themes/soria/images/titleBar.png') repeat-x scroll center top
 }
 .dojoxCalendar .dojoxCalendarMonthLabel {
-	border: 1px solid #e6e2e3;
+	border: 1px solid silver;
 }
 .dojoxCalendar .dojoxCalendarYearLabel {
-	border: 1px solid #e6e2e3;
+	border: 1px solid silver;
 }
 .dojoxCalendar .dijitCalendarNextMonth .dijitCalendarDateLabel,
 .dojoxCalendar .dijitCalendarPreviousMonth .dijitCalendarDateLabel  {
@@ -1629,26 +1605,26 @@ margin-top: -10px;
 	padding-right: 0px;
 }
 .dojoxCalendar .dijitCalendarNextMonth, .dojoxCalendar .dijitCalendarPreviousMonth {
-  background-color: #e6e2e3;
+  background-color: silver;
 }
 .dojoxCalendar .dijitCalendarNextMonth .dojoxCalendarYearLabel,
 .dojoxCalendar .dijitCalendarPreviousMonth .dojoxCalendarYearLabel {
-	background-color: #e6e2e3;
-	border-color: #e6e2e3;
+	background-color: silver;
+	border-color: silver;
 	/*color: #646464;*/
-        color: #183720;
+        color: grey;
 }
 .dojoxCalendar .dijitCalendarSelectedDate,
 .tundra .dojoxCalendar .dijitCalendarSelectedDate,
 .nihilo .dojoxCalendar .dijitCalendarSelectedDate {
 	
-	background-color:#183720 !important;
+	background-color: grey !important;
 	color: white !important;
-	border:#183720 solid 1px !important;
+	border:grey solid 1px !important;
 }
 .soria .dojoxCalendar td.dijitCalendarSelectedDate {
 	background-color: #B9CBF1 !important;
-	color: #183720 !important;
+	color: grey !important;
 	border: 1px solid #4B5AAA !important;
 }
 .soria .dojoxCalendar .dijitCalendarSelectedDate div {
@@ -1658,7 +1634,7 @@ margin-top: -10px;
 }
 .dojoxCalendar .dijitCalendarSelectedDate div {
 	
-	background-color: #183720 !important;
+	background-color: grey !important;
         color: white;
 	border: none  !important;
 }
@@ -1697,7 +1673,7 @@ div.dojoxCalendar tr.dojoxCal-MY-G-Template td.dijitCalendarSelectedDate {
 	text-align: center;
 }
 .dojoxCal-MY-labels {
-	background-color: #e6e2e3;
+	background-color: silver;
 }
 .dojoxCal-MY-labels .dojoxCalendarIncrease,
 .dojoxCal-MY-labels .dojoxCalendarDecrease {
@@ -1750,7 +1726,7 @@ div.dojoxCalendar tr.dojoxCal-MY-G-Template td.dijitCalendarSelectedDate {
         
         font-family: Verdana;
 	position:relative; 
-	background-color: #e6e2e3;
+	background-color: silver;
 	padding:8px; 
 	border:1px solid #183720;	
 	padding-bottom:20px;
@@ -1760,23 +1736,23 @@ div.dojoxCalendar tr.dojoxCal-MY-G-Template td.dijitCalendarSelectedDate {
 .nihilo .slideShowTitle {
         
         margin-left: 48%;
-	background-color:#e6e2e3;
+	background-color:silver;
 	font-size:10pt;
-        color: #e6e2e3;
+        color: silver;
 }
 
 .nihilo .slideShowTitle .slideShowCounterText {
     
         font-family: Verdana;
 	font-size:6pt;
-        color:#e6e2e3;
-        background-color: #e6e2e3;
+        color:silver;
+        background-color: silver;
 }
 
 .nihilo .slideShowNav { 
 
-        color: #e6e2e3;
-	background-color:#e6e2e3; 
+        color: silver;
+	background-color:silver; 
 	width:100%;
 }
 
@@ -1788,7 +1764,7 @@ div.dojoxCalendar tr.dojoxCal-MY-G-Template td.dijitCalendarSelectedDate {
 	overflow:hidden;
 	width:100px;
 	height:100px; 
-	border: 11px solid #e6e2e3 !important; 
+	border: 11px solid #D1D6DA !important; 
 	background:#fff url(images/loading.gif) no-repeat center center;
 	
 	-webkit-box-shadow: 0px 6px 10px #636363; 
