--- a/public/default.css
+++ b/public/default.css
@@ -73,7 +73,7 @@ select {
     border-radius: 5px 5px 5px 5px;
     -moz-border-radius: 5px 5px 5px 5px;
     -webkit-border-radius: 5px 5px 5px 5px;
-    box-shadow: 1px 1px 50px 5px orange;
+    box-shadow: 1px 1px 50px 5px #66BBEE;
 
     
     
@@ -147,7 +147,7 @@ select {
     font-size: 30px;
     margin-left: 10px;
     margin-top: 5px;
-        text-shadow: 1px 1px 3px orange;
+        text-shadow: 1px 1px 3px #66BBEE;
 
     
 }
@@ -180,7 +180,7 @@ select {
     color: white;
     height: 45px;
     text-shadow: 1px 1px 1px black;
-    background-color: orange;
+    background-color: #66BBEE;
     text-decoration: none;
     box-shadow: 1px 1px 10px black;
         border-radius: 0 0 5px 5px;
@@ -252,7 +252,9 @@ font-family: 'Prosto One', cursive;
 
 #content_container h1 {
 
-    font-family: 'Nothing You Could Do', cursive;
+/*    font-family: 'Nothing You Could Do', cursive;
+*/    font-family: 'Prosto One', cursive;
+
 
 /*    background-image: url('/HeadlineSplatter.png');
 */    /*background-repeat: no-repeat;*/
@@ -262,8 +264,8 @@ font-family: 'Prosto One', cursive;
     height: 33px;
     margin-top: 0px;
     font-size: 1.2em;
-    font-weight: bold;
-    text-align: right;
+/*    font-weight: bold;
+*/    text-align: right;
     vertical-align: middle;
     padding-top: 0.4em;
     padding-right: 30px;
